--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,16 @@ repositories {
 }
 
 
-    dependencies {
-        implementation 'org.testng:testng:7.5.1'
-        implementation 'org.seleniumhq.selenium:selenium-java:4.16.1'
+dependencies {
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.16.1'
+    implementation group: 'org.testng', name: 'testng', version: '7.5.1'
 
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
 
-
-
-    }
+    testCompileOnly 'org.projectlombok:lombok:1.18.28'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+}
 
 test {
     useTestNG()
