--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,8 @@ dependencies {
 test {
     useTestNG()
 }
+task qa(type:Test) {
+    useTestNG() {
+        suites 'src/test/resources/testng.xml '
+    }
+}
