--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.16.1'
     implementation group: 'org.testng', name: 'testng', version: '7.5.1'
@@ -22,12 +21,43 @@ dependencies {
 
     implementation 'ch.qos.logback:logback-classic:1.4.14'
 }
-
 test {
     useTestNG()
 }
-task qa(type:Test) {
+
+task qa(type: Test) {
     useTestNG() {
-        suites 'src/test/resources/testng.xml '
+        def suite = System.getProperty('suite', '')
+
+        if (suite.equals('quick')) {
+            suites 'src/test/resources/quick.xml'
+        } else if (suite.equals('login')) {
+            suites 'src/test/resources/login.xml'
+        } else {
+            suites 'src/test/resources/testng.xml'
+        }
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${project.browser}"
     }
 }
+
+task scope(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/scope.xml'
+    }
+}
+
+task team(type: Test) {
+    useTestNG() {
+        def groups = System.getProperty('groups')
+        if (groups != null) {
+            includeGroups groups
+        }
+
+        // Используем suites для указания файлов Suite
+        suites 'src/test/resources/base.xml'
+    }
+}
+
+
