add browser in scope task

--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,14 @@ dependencies {
 
     implementation 'ch.qos.logback:logback-classic:1.4.14'
 }
+
 test {
     useTestNG()
 }
 
-task qa(type: Test) {
-    useTestNG() {
+task qa(type:Test){
+    useTestNG(){
+
         def suite = System.getProperty('suite', '')
 
         if (suite.equals('quick')) {
@@ -36,28 +38,41 @@ task qa(type: Test) {
         } else {
             suites 'src/test/resources/testng.xml'
         }
+
+
     }
-    if (project.hasProperty('browser')) {
-        systemProperty 'browser', "${project.browser}"
+    if(project.hasProperty('browser')){
+        systemProperty 'browser',
+
+                "${browser}"
+
     }
 }
 
-task scope(type: Test) {
-    useTestNG() {
+
+task scope(type:Test){
+    useTestNG(){
         suites 'src/test/resources/scope.xml'
     }
+
+    if(project.hasProperty('browser')){
+        systemProperty 'browser',
+
+                "${browser}"
+
+    }
 }
 
-task team(type: Test) {
-    useTestNG() {
+
+task team (type: Test){
+    useTestNG(){
         def groups = System.getProperty('groups')
         if (groups != null) {
             includeGroups groups
         }
 
-        // Используем suites для указания файлов Suite
         suites 'src/test/resources/base.xml'
     }
+
+
 }
-
-
